--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         </p>
         <dl class="dl-horizontal">
           <dt>success</dt>
-          <dd>True or False if the WakeOnLan packet was send</dd>
+          <dd>True or False if the WakeOnLan packet was sent</dd>
           <dt>message</dt>
-          <dd>Message as string what happen</dd>
+          <dd>Message as string what happened</dd>
           <dt>error</dt>
           <dd>Encoded Jsonobject from GOLANG Error Object</dd>
         </dl>
