Fixed additional typos

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <dt>message</dt>
           <dd>Message as string what happened</dd>
           <dt>error</dt>
-          <dd>Encoded Jsonobject from GOLANG Error Object</dd>
+          <dd>Encoded JSON Object from GOLANG Error Object</dd>
         </dl>
         </p>
         <hr>
