Changed Dockerfiles to bnhf

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-12" role="main">
-        <h1 class="mb-4 mt-4"><span class="fas fa-power-off"></span> Wake-on-Lan Web Interface<small></h1>
+        <h1 class="mb-4 mt-4"><span class="fas fa-power-off"></span> Wake-on-LAN Web Interface<small></h1>
         <div id="snackbar" class="alert hideMe">
           Message comes here
         </div>
