--- a/index.html
+++ b/index.html
@@ -47,11 +47,14 @@
         <hr>
         <p>
           <i class="fab fa-github"></i> Project Page: <a
-            href="https://github.com/sameerdhoot/wolweb">https://github.com/sameerdhoot/wolweb</a>
+            href="https://github.com/bnhf/wolweb">https://github.com/bnhf/wolweb</a>
         </p>
         <p class="m-0">
-          <small>Built with <span class="fa fa-heart text-danger" aria-hidden="true"></span> by Sameer Dhoot, <span
-              class="fab fa-github"></span> <a href="https://github.com/sameerdhoot">https://github.com/sameerdhoot</a></small>
+          <small>Built with <span class="fa fa-heart text-danger" aria-hidden="true"></span> by Scott Ueland, <span
+              class="fab fa-github"></span> <a href="https://github.com/bnhf">https://github.com/bnhf</a></small>
+        </p>
+        <p class="m-0">
+          <small class="ml-2"><i class="fas fa-code-branch m-1"></i> from Sameer Dhoot's project <a href="https://github.com/sameerdhoot/wolweb">https://github.com/sameerdhoot/wolweb</a></small>
         </p>
         <p class="m-0">
           <small class="ml-2"><i class="fas fa-code-branch m-1"></i> from David Baumann's project <a href="https://github.com/dabondi/go-rest-wol">https://github.com/dabondi/go-rest-wol</a></small>
